--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,3 +55,11 @@ CAROUSEL
     display: inline-block;
     margin:5px;
 }
+
+/*****************************
+tasks
+*****************************/
+
+.statusTrue{
+  text-decoration: line-through;
+}
